--- a/bedrock/base/templates/includes/protocol/footer/firefox.html
+++ b/bedrock/base/templates/includes/protocol/footer/firefox.html
@@ -37,7 +37,7 @@
             <li><a href="{{ url('firefox.lockwise.lockwise') }}" data-link-type="footer" data-link-name="Lockwise">Lockwise</a></li>
             <li><a href="https://monitor.firefox.com/?utm_source=www.mozilla.org&utm_medium=referral&utm_campaign=footer&utm_content=monitor" data-link-type="footer" data-link-name="Monitor">Monitor</a></li>
             <li><a href="https://send.firefox.com/?utm_source=www.mozilla.org&utm_medium=referral&utm_campaign=footer&utm_content=send" data-link-type="footer" data-link-name="Send">Send</a></li>
-            <!-- <li><a href="#TKTK" data-link-type="footer" data-link-name="Browsers">{{ _('Browsers') }}</a></li> -->
+            {% if LANG.startswith('en-') %}<li><a href="{{ url('firefox.browsers.index') }}" data-link-type="footer" data-link-name="Browsers">{{ _('Browsers') }}</a></li>{% endif %}
             <li><a href="https://getpocket.com/?utm_source=www.mozilla.org&utm_medium=referral&utm_campaign=footer&utm_content=pocket" data-link-type="footer" data-link-name="Pocket">Pocket</a></li>
           </ul>
         </section>
